@@ -4,6 +4,7 @@ Log:
 
 - ??/??/2007, version 1.0.5: roms
 	- support NetBSD serial port device names (Jukka Salmi)
+	- cosmetic change in the name of the TiEmu virtual link
 
 - 23/02/2007, version 1.0.4: roms
 	- enabled i18n
